--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Заголовок</title>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=6dd89dae-fb44-4211-aa16-4a251ca5ce87&suggest_apikey=33ab629c-47e8-4ab9-adc7-8a539fd93dd7" referrerpolicy="no-referrer" type="text/javascript"></script>
+
+
+    <title>Dostaffkin — Доставка посылок между странами и внутри стран. Безопасно. Быстро. В целости и сохранности!</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
